--- a/index.html
+++ b/index.html
@@ -48,24 +48,10 @@
 
   <img src="https://raw.githubusercontent.com/kannadayo0927-png/kawase-app/main/assets/miyumi_kyousi.png" width="240" alt="ミユミ先生">
 
-  <h2>🔮 アプリへジャンプ</h2>
-  <p><a class="button" href="https://kawase-app-6i2jgizc9cxgdm4bfwpxnu.streamlit.app/" target="_blank">▶ ミユミの為替予報アプリを見る</a></p>
-
-  <h2>📈 アプリの特徴と画面紹介</h2>
-  <p>ミユミちゃんが案内する「為替予報アプリ」は、ドル/円の未来をAIで予測するツールです。<br>
-     初心者でも安心して使えるように、キャラクターによる解説と、シンプルな操作性を重視しています。</p>
-
-  <ul>
-    <li>🔮 <strong>10分後・1時間後の為替予測</strong>：AIが直近のチャートから未来を予測</li>
-    <li>📊 <strong>チャート表示</strong>：SMAやボリンジャーバンドなどの指標も確認可能</li>
-    <li>🗣 <strong>ミユミちゃんのコメント</strong>：買い時・売り時をやさしく解説</li>
-  </ul>
-
-  <h3>🖼 アプリ画面のイメージ</h3>
-  <img src="assets/miyumi-forecast10min-deprecated.png" alt="10分後予測画面">
-  <img src="assets/miyumi-forecast1hour-deprecated.png" alt="1時間後予測画面">
-  <img src="assets/miyumi-economic-news.png" alt="経済指標ニュース画面">
-  <img src="assets/miyumi-forecast5day-deprecated.png" alt="5日間予測画面">
+  <h2>🔮 ミユミちゃんに未来予報をお願いする</h2>
+  <p>現在、ミユミちゃんは未来予報の準備中です。<br>
+     フォームからご希望を送っていただければ、案内をお届けします。</p>
+  <a class="button" href="https://forms.gle/9ihTnTC26sA18EEm7" target="_blank">▶ 未来予報をお願いする</a>
 
   <h2>📄 関連リンク</h2>
   <ul>
