--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
       background-color: #005fa3;
     }
     img {
-      width: 100%;
-      max-width: 600px;
+      max-width: 100%;
       border-radius: 8px;
       margin-bottom: 1em;
     }
@@ -47,6 +46,17 @@
      UXとAIの力で、未来を読む安心感をあなたに。</p>
 
   <img src="https://raw.githubusercontent.com/kannadayo0927-png/kawase-app/main/assets/miyumi_kyousi.png" width="240" alt="ミユミ先生">
+
+  <h2>💹 ミユミちゃんの今の案内</h2>
+  <div style="display: flex; align-items: center; gap: 1em; background-color: #fff7e6; border-left: 6px solid #ff9900; border-radius: 4px; padding: 1em;">
+    <div style="flex: 1;">
+      <p style="font-size: 1.2em; margin: 0;">
+        💬 <strong>現在の判断：</strong> <span style="color: #cc0000;">買い時</span>（手動更新）
+      </p>
+      <p style="margin-top: 0.5em;">「今は買いのチャンスかもっ⭐ ミユミちゃんも応援してるよっ！」</p>
+    </div>
+    <img src="assets/miyumi-economic-news.png" alt="ミユミの経済案内" style="width: 200px; border-radius: 8px;">
+  </div>
 
   <h2>📄 関連リンク</h2>
   <ul>
