ミユミLP更新：買い時案内と画像表示を追加

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div style="display: flex; align-items: center; gap: 1em; background-color: #fff7e6; border-left: 6px solid #ff9900; border-radius: 4px; padding: 1em;">
     <div style="flex: 1;">
       <p style="font-size: 1.2em; margin: 0;">
-        💬 <strong>現在の判断：</strong> <span style="color: #cc0000;">買い時</span>（手動更新）
+        💬 <strong>現在の判断：</strong> <span style="color: #cc0000;">買い時</span>
       </p>
       <p style="margin-top: 0.5em;">「今は買いのチャンスかもっ⭐ ミユミちゃんも応援してるよっ！」</p>
     </div>
