案内表示を『判断が難しい』に変更。UX安心感を強化

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
   <div style="display: flex; align-items: center; gap: 1em; background-color: #fff7e6; border-left: 6px solid #ff9900; border-radius: 4px; padding: 1em;">
     <div style="flex: 1;">
       <p style="font-size: 1.2em; margin: 0;">
-        💬 <strong>現在の判断：</strong> <span style="color: #cc0000;">買い時</span>
+        💬 <strong>現在の判断：</strong> <span style="color: #555;">判断が難しい</span>
       </p>
-      <p style="margin-top: 0.5em;">「今は買いのチャンスかもっ⭐ ミユミちゃんも応援してるよっ！」</p>
+      <p style="margin-top: 0.5em;">「経済指標などを見て、じっくり判断してみてねっ⭐ ミユミちゃんも一緒に考えるよっ！」</p>
     </div>
     <img src="assets/miyumi-economic-news.png" alt="ミユミの経済案内" style="width: 200px; border-radius: 8px;">
   </div>
